--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
+    "@types/qs": "^6.9.7",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -72,6 +73,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "qs": "^6.11.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
     "winston": "^3.8.2",
